second update to project 3

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="page">
       <header class="header">
         <img
-          src="./images/logo.svg.svg"
+          src="./images/logo.svg"
           alt="Spots Logo"
           class="header__logo"
         />
@@ -30,12 +30,12 @@
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-btn">
-              <img src="./images/pencil.svg.svg" alt="Pencil Icon" />Edit
+              <img src="./images/pencil.svg" alt="Pencil Icon" />Edit
               Profile
             </button>
           </div>
           <button type="button" class="profile__add-btn">
-            <img src="./images/plus.svg.svg" alt="Plus Icon" />New Post
+            <img src="./images/plus.svg" alt="Plus Icon" />New Post
           </button>
         </section>
         <section class="cards page__section">
