Project Mobile View Updates

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width= , initial-scale=1.0" />
-    <meta name="description" content="???" />
-    <meta name="keywords" content="HTML, CSS, ???" />
+    <meta name="description" content="Spots Profile Webpage" />
+    <meta name="keywords" content="Spots, Profile, Bessie Coleman" />
     <meta name="author" content="Lizmary Chardon" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -27,8 +27,8 @@
             class="profile__avatar"
           />
           <div class="profile__column">
-            <h1 class="profile__name">Bessie Coleman</h1>
-            <p class="profile__description">Civil Aviator</p>
+            <h1 class="profile__name">Aliaune Damala Bouga Time Bongo Puru Nacka Lu Lu Lu Badara Akon</h1>
+            <p class="profile__description">Known mononymously as Akon (/ˈeɪkɒn/), is a Senegalese-American singer, record producer, and entrepreneur. An influential figure in modern world</p>
             <button type="button" class="profile__edit-btn">
               <img src="./images/pencil.svg" alt="Pencil Icon" />Edit
               Profile
@@ -81,7 +81,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">
-                  A very long bridge, over the forest...
+                  A very long bridge, over the forest
                 </h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
