changes to border radius and text elements

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           />
           <div class="profile__column">
             <h1 class="profile__name">Aliaune Damala Bouga Time Bongo Puru Nacka Lu Lu Lu Badara Akon</h1>
-            <p class="profile__description">Known mononymously as Akon (/ˈeɪkɒn/), is a Senegalese-American singer, record producer, and entrepreneur. An influential figure in modern world</p>
+            <p class="profile__description">Known mononymously as Akon (/ˈeɪkɒn/), is a Senegalese-American singer, record producer, and entrepreneur. An influential figure in modern world.</p>
             <button type="button" class="profile__edit-btn">
               <img src="./images/pencil.svg" alt="Pencil Icon" />Edit
               Profile
