Project Review Updates

--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@
     <meta name="keywords" content="Spots, Profile, Bessie Coleman" />
     <meta name="author" content="Lizmary Chardon" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./vendor/favicon.ico" type="image/x-icon" />
     <title>Spots</title>
   </head>
   <body>
     <div class="page">
       <header class="header">
-        <img
-          src="./images/logo.svg"
-          alt="Spots Logo"
-          class="header__logo"
-        />
+        <img src="./images/logo.svg" alt="Spots Logo" class="header__logo" />
       </header>
       <main class="content">
         <section class="profile page__section">
@@ -27,11 +23,16 @@
             class="profile__avatar"
           />
           <div class="profile__column">
-            <h1 class="profile__name">Aliaune Damala Bouga Time Bongo Puru Nacka Lu Lu Lu Badara Akon</h1>
-            <p class="profile__description">Known mononymously as Akon (/ˈeɪkɒn/), is a Senegalese-American singer, record producer, and entrepreneur. An influential figure in modern world.</p>
+            <h1 class="profile__name">
+              Aliaune Damala Bouga Time Bongo Puru Nacka Lu Lu Lu Badara Akon
+            </h1>
+            <p class="profile__description">
+              Known mononymously as Akon (/ˈeɪkɒn/), is a Senegalese-American
+              singer, record producer, and entrepreneur. An influential figure
+              in modern world.
+            </p>
             <button type="button" class="profile__edit-btn">
-              <img src="./images/pencil.svg" alt="Pencil Icon" />Edit
-              Profile
+              <img src="./images/pencil.svg" alt="Pencil Icon" />Edit Profile
             </button>
           </div>
           <button type="button" class="profile__add-btn">
@@ -80,9 +81,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">
-                  A very long bridge, over the forest
-                </h2>
+                <h2 class="card__title">A very long bridge, over the forest</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -110,10 +109,10 @@
             </li>
           </ul>
         </section>
-        </div>
       </main>
       <footer class="footer">
-      <footer class="footer__copyright">2025 &copy; Spots</footer>
-    </footer>
-</body>
+        <p class="footer__copyright">2025 &copy; Spots</p>
+      </footer>
+    </div>
+  </body>
 </html>
