--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </footer>
       <div class="modal modal_is-opened">
         <div class="modal__container">
-          <button type="button" class="modal__close-btn">X</button>
+          <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
           <form class="modal__form">
             <label for="profile-name-input" class="modal__label">Name
