--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
           />
           <div class="profile__column">
             <h1 class="profile__name">
-              Aliaune Damala Bouga Time Bongo Puru Nacka Lu Lu Lu Badara Akon
+              Bessie Coleman
             </h1>
             <p class="profile__description">
-              Known mononymously as Akon (/ˈeɪkɒn/), is a Senegalese-American
-              singer, record producer, and entrepreneur. An influential figure
-              in modern world.
+              Civil Aviator
             </p>
             <button type="button" class="profile__edit-btn">
               <img src="./images/pencil.svg" alt="Pencil Icon" />Edit Profile
@@ -113,7 +111,7 @@
       <footer class="footer">
         <p class="footer__copyright">2025 &copy; Spots</p>
       </footer>
-      <div class="modal modal_is-opened">
+      <div class="modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
@@ -123,6 +121,21 @@
             </label>
             <label for="profile-description-input" class="modal__label">Description
             <input id="profile-description-input" type="text" class="modal__input" placeholder="Describe yourself">
+            </label>
+            <button type="submit" class="modal__submit-btn ">Save</button>
+          </form>
+        </div>
+      </div>
+      <div class="modal modal_is-opened">
+        <div class="modal__container">
+          <button type="button" class="modal__close-btn"></button>
+          <h2 class="modal__title">New post</h2>
+          <form class="modal__form">
+            <label for="card-image-input" class="modal__label">Image link
+            <input id="card-image-input" type="url" class="modal__input" placeholder="Paste a link to the picture">
+            </label>
+            <label for="caption-input" class="modal__label">Caption
+            <input id="caption-input" type="text" class="modal__input" placeholder="Type your caption">
             </label>
             <button type="submit" class="modal__submit-btn ">Save</button>
           </form>
