--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New post</h2>
-          <form class="modal__form">
+          <form class="modal__form" id="new-post-form">
             <label for="card-image-input" class="modal__label">Image link
             <input id="card-image-input" type="url" class="modal__input" placeholder="Paste a link to the picture">
             </label>
