--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
           <h2 class="modal__title">Edit profile</h2>
           <form class="modal__form">
             <label for="profile-name-input" class="modal__label">Name
-            <input id="profile-name-input" type="text" class="modal__input" placeholder="Type your name">
+            <input id="profile-name-input" type="text" class="modal__input" placeholder="Type your name" required>
             </label>
             <label for="profile-description-input" class="modal__label">Description
-            <input id="profile-description-input" type="text" class="modal__input" placeholder="Describe yourself">
+            <input id="profile-description-input" type="text" class="modal__input" placeholder="Describe yourself" required>
             </label>
             <button type="submit" class="modal__submit-btn ">Save</button>
           </form>
@@ -132,10 +132,10 @@
           <h2 class="modal__title">New post</h2>
           <form class="modal__form" id="new-post-form">
             <label for="card-image-input" class="modal__label">Image link
-            <input id="card-image-input" type="url" class="modal__input" placeholder="Paste a link to the picture">
+            <input id="card-image-input" type="url" class="modal__input" placeholder="Paste a link to the picture" required>
             </label>
             <label for="caption-input" class="modal__label">Caption
-            <input id="caption-input" type="text" class="modal__input" placeholder="Type your caption">
+            <input id="caption-input" type="text" class="modal__input" placeholder="Type your caption" required>
             </label>
             <button type="submit" class="modal__submit-btn ">Save</button>
           </form>
