--- a/index.html
+++ b/index.html
@@ -23,12 +23,8 @@
             class="profile__avatar"
           />
           <div class="profile__column">
-            <h1 class="profile__name">
-              Bessie Coleman
-            </h1>
-            <p class="profile__description">
-              Civil Aviator
-            </p>
+            <h1 class="profile__name">Bessie Coleman</h1>
+            <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-btn">
               <img src="./images/pencil.svg" alt="Pencil Icon" />Edit Profile
             </button>
@@ -39,72 +35,16 @@
         </section>
         <section class="cards page__section">
           <ul class="cards__list">
-            <li class="card">
-              <img
-                src="./images/spots-images/spots-images/1-photo-by-moritz-feldmann-from-pexels.jpg"
-                alt="Val Thorens"
-                class="card__image"
-              />
-              <div class="card__content">
-                <h2 class="card__title">Val Thorens</h2>
-                <button type="button" class="card__like-btn"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/spots-images/spots-images/2-photo-by-ceiline-from-pexels.jpg"
-                alt="restaurant terrace"
-                class="card__image"
-              />
-              <div class="card__content">
-                <h2 class="card__title">Restaurant terrace</h2>
-                <button type="button" class="card__like-btn"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/spots-images/spots-images/3-photo-by-tubanur-dogan-from-pexels.jpg"
-                alt="an outdoor cafe"
-                class="card__image"
-              />
-              <div class="card__content">
-                <h2 class="card__title">An outdoor cafe</h2>
-                <button type="button" class="card__like-btn"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/spots-images/spots-images/4-photo-by-maurice-laschet-from-pexels.jpg"
-                alt="a very long bridge over the forest"
-                class="card__image"
-              />
-              <div class="card__content">
-                <h2 class="card__title">A very long bridge, over the forest</h2>
-                <button type="button" class="card__like-btn"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/spots-images/spots-images/5-photo-by-van-anh-nguyen-from-pexels.jpg"
-                alt="tunnel with morning light"
-                class="card__image"
-              />
-              <div class="card__content">
-                <h2 class="card__title">Tunnel with morning light</h2>
-                <button type="button" class="card__like-btn"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/spots-images/spots-images/6-photo-by-moritz-feldmann-from-pexels.jpg"
-                alt="mountain house"
-                class="card__image"
-              />
-              <div class="card__content">
-                <h2 class="card__title">Mountain house</h2>
-                <button type="button" class="card__like-btn"></button>
-              </div>
-            </li>
+            <template id="card-template">
+              <li class="card">
+                <button class="card__delete-btn" type="button"></button>
+                <img src="#" alt="" class="card__image" />
+                <div class="card__content">
+                  <h2 class="card__title"></h2>
+                  <button type="button" class="card__like-btn"></button>
+                </div>
+              </li>
+            </template>
           </ul>
         </section>
       </main>
@@ -116,13 +56,27 @@
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
           <form class="modal__form">
-            <label for="profile-name-input" class="modal__label">Name
-            <input id="profile-name-input" type="text" class="modal__input" placeholder="Type your name" required>
+            <label for="profile-name-input" class="modal__label"
+              >Name
+              <input
+                id="profile-name-input"
+                type="text"
+                class="modal__input"
+                placeholder="Type your name"
+                required
+              />
             </label>
-            <label for="profile-description-input" class="modal__label">Description
-            <input id="profile-description-input" type="text" class="modal__input" placeholder="Describe yourself" required>
+            <label for="profile-description-input" class="modal__label"
+              >Description
+              <input
+                id="profile-description-input"
+                type="text"
+                class="modal__input"
+                placeholder="Describe yourself"
+                required
+              />
             </label>
-            <button type="submit" class="modal__submit-btn ">Save</button>
+            <button type="submit" class="modal__submit-btn">Save</button>
           </form>
         </div>
       </div>
@@ -131,14 +85,39 @@
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New post</h2>
           <form class="modal__form" id="new-post-form">
-            <label for="card-image-input" class="modal__label">Image link
-            <input id="card-image-input" type="url" class="modal__input" placeholder="Paste a link to the picture" required>
+            <label for="card-image-input" class="modal__label"
+              >Image link
+              <input
+                id="card-image-input"
+                type="url"
+                class="modal__input"
+                placeholder="Paste a link to the picture"
+                required
+              />
             </label>
-            <label for="caption-input" class="modal__label">Caption
-            <input id="caption-input" type="text" class="modal__input" placeholder="Type your caption" required>
+            <label for="caption-input" class="modal__label"
+              >Caption
+              <input
+                id="caption-input"
+                type="text"
+                class="modal__input"
+                placeholder="Type your caption"
+                required
+              />
             </label>
-            <button type="submit" class="modal__submit-btn ">Save</button>
+            <button type="submit" class="modal__submit-btn">Save</button>
           </form>
+        </div>
+      </div>
+    </div>
+
+     <div class="modal modal_is-opened" id="preview-modal">
+        <div class="modal__image-container">
+          <button aria-label="Close modal" class="modal__close" type="button"></button>
+          <img src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/7-photo-by-griffin-wooldridge-from-pexels.jpg" alt="Golden gate bridge image" class="modal__image"/>
+          <p class="modal__caption">Golden Gate Bridge</p>
+          
+        
         </div>
       </div>
     </div>
