--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width= , initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Spots Profile Webpage" />
     <meta name="keywords" content="Spots, Profile, Bessie Coleman" />
     <meta name="author" content="Lizmary Chardon" />
@@ -109,15 +109,19 @@
           </form>
         </div>
       </div>
-    </div>
-
-     <div class="modal modal_is-opened" id="preview-modal">
+      <div class="modal modal_type_preview modal_is-opened" id="preview-modal">
         <div class="modal__image-container">
-          <button aria-label="Close modal" class="modal__close" type="button"></button>
-          <img src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/7-photo-by-griffin-wooldridge-from-pexels.jpg" alt="Golden gate bridge image" class="modal__image"/>
+          <button
+            aria-label="Close modal"
+            class="modal__close_type_preview"
+            type="button"
+          ></button>
+          <img
+            src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/7-photo-by-griffin-wooldridge-from-pexels.jpg"
+            alt="Golden gate bridge image"
+            class="modal__image"
+          />
           <p class="modal__caption">Golden Gate Bridge</p>
-          
-        
         </div>
       </div>
     </div>
