--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
-          <form class="modal__form" novalidate>
+          <form class="modal__form" id="edit-profile-form" novalidate>
             <label for="profile-name-input" class="modal__label"
               >Name
               <input
@@ -85,9 +85,7 @@
                 class="modal__error"
               ></span>
             </label>
-            <button type="submit" class="modal__submit-btn" disabled>
-              Save
-            </button>
+            <button type="submit" class="modal__submit-btn">Save</button>
           </form>
         </div>
       </div>
