--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
           </button>
         </section>
         <section class="cards page__section">
-          <ul class="cards__list">
-            <template id="card-template">
-              <li class="card">
-                <button class="card__delete-btn" type="button"></button>
-                <img src="#" alt="" class="card__image" />
-                <div class="card__content">
-                  <h2 class="card__title"></h2>
-                  <button type="button" class="card__like-btn"></button>
-                </div>
-              </li>
-            </template>
-          </ul>
+          <ul class="cards__list"></ul>
         </section>
+
+        <template id="card-template">
+          <li class="card">
+            <button class="card__delete-btn" type="button"></button>
+            <img src="#" alt="" class="card__image" />
+            <div class="card__content">
+              <h2 class="card__title"></h2>
+              <button type="button" class="card__like-btn"></button>
+            </div>
+          </li>
+        </template>
       </main>
       <footer class="footer">
         <p class="footer__copyright">2025 &copy; Spots</p>
