--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,11 @@
       <main class="content">
         <section class="profile page__section">
           <div class="profile__avatar-container">
+            <img
+              src="<%=require('./images/spots-images/spots-images/avatar.jpg')%>"
+              alt="Bessie Coleman"
+              class="profile__avatar"
+            />
             <button class="profile__avatar-btn">
               <img
                 class="profile__pencil-icon"
@@ -28,11 +33,6 @@
                 alt="Avatar Pencil icon"
               />
             </button>
-            <img
-              src="<%=require('./images/spots-images/spots-images/avatar.jpg')%>"
-              alt="Bessie Coleman"
-              class="profile__avatar"
-            />
           </div>
           <div class="profile__column">
             <h1 class="profile__name">Bessie Coleman</h1>
@@ -70,7 +70,7 @@
       <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
-          <h2 class="modal__title">Edit profile</h2>
+          <h3 class="modal__title">Edit profile</h3>
           <form class="modal__form" id="edit-profile-form" novalidate>
             <label for="profile-name-input" class="modal__label"
               >Name
@@ -108,7 +108,7 @@
       <div class="modal" id="new-post-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
-          <h2 class="modal__title">New post</h2>
+          <h4 class="modal__title">New post</h4>
           <form class="modal__form" id="new-post-form" novalidate>
             <label for="card-image-input" class="modal__label"
               >Image link
@@ -153,7 +153,7 @@
     <div class="modal" id="avatar-modal">
       <div class="modal__container">
         <button type="button" class="modal__close-btn"></button>
-        <h2 class="modal__title">Edit profile avatar</h2>
+        <h5 class="modal__title">Edit profile avatar</h5>
         <form class="modal__form" id="edit-avatar-form" novalidate>
           <label for="profile-avatar-input" class="modal__label"
             >Profile picture
@@ -168,6 +168,18 @@
             <span id="profile-avatar-input-error" class="modal__error"></span>
           </label>
           <button type="submit" class="modal__submit-btn">Save</button>
+        </form>
+      </div>
+    </div>
+    <div class="modal" id="delete-modal">
+      <div class="modal__container">
+        <button type="button" class="modal__delete_close-btn"></button>
+        <h6 class="modal__title">
+          Are you sure you want to delete this image?
+        </h6>
+        <form class="modal__form" id="modal__delete-form" novalidate>
+          <button type="submit" class="modal__delete-btn">Delete</button>
+          <button type="button" class="modal__cancel-btn">Cancel</button>
         </form>
       </div>
     </div>
