--- a/src/index.html
+++ b/src/index.html
@@ -178,11 +178,10 @@
           Are you sure you want to delete this image?
         </h6>
         <form class="modal__form" id="modal__delete-form" novalidate>
-          <button type="submit" class="modal__delete-btn">Delete</button>
+          <button type="submit" class="modal__submit-btn">Delete</button>
           <button type="button" class="modal__cancel-btn">Cancel</button>
         </form>
       </div>
     </div>
-    <script type="module" src="./pages/index.js"></script>
   </body>
 </html>
